--- a/src/scss/_Footer.scss
+++ b/src/scss/_Footer.scss
@@ -4,3 +4,9 @@
   padding-top: $spacing-xl*2;
   border-top: 1px solid rgba(0, 0, 0, 0.25);
 }
+
+@media (max-width: 800px) {
+  .footer p:last-child {
+    padding-bottom: $spacing-l;
+  }
+}
