--- a/src/scss/_Header.scss
+++ b/src/scss/_Header.scss
@@ -7,7 +7,7 @@
 }
 
 .header-logo {
-  height: 75%;
+  height: 70%;
   margin-left: $spacing-l;
   position: absolute;
   top: 50%;
@@ -58,8 +58,114 @@
   }
 }
 
+#menuIcon {
+  display: none;
+}
+
 @media (max-width: 800px) {
   .header-links {
-    display: none;
+    position: static;
+    display: block;
+    padding: 0;
+    opacity: 0;
+    transition: opacity 0.25s;
+
+    li {
+      width: 100%;
+      background-color: rgba(255, 255, 255, 0.9);
+      margin-left: 0;
+      padding-top: $spacing-l;
+      text-align: center;
+    }
+
+    li:first-child {
+      margin-top: 66px;
+    }
+
+    li:last-child {
+      padding-bottom: $spacing-l;
+    }
+  }
+
+  .header-links.open {
+    opacity: 1;
+  }
+
+  #menuIcon {
+    display: block;
+    width: 30px;
+    height: 24px;
+    position: relative;
+    cursor: pointer;
+    float: right;
+    margin-right: $spacing-l;
+    top: $header-height/2;
+    transform: translateY(-50%);
+  }
+
+  #menuIcon span {
+    display: block;
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    background: $rosewood-brown;
+    border-radius: 1px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+  }
+
+  #menuIcon span:nth-child(1) {
+    top: 0px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+  }
+
+  #menuIcon span:nth-child(2) {
+    top: 12px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+  }
+
+  #menuIcon span:nth-child(3) {
+    top: 24px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+  }
+
+  #menuIcon.open span:nth-child(1) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    top: 3px;
+    left: 2px;
+  }
+
+  #menuIcon.open span:nth-child(2) {
+    width: 0%;
+    opacity: 0;
+  }
+
+  #menuIcon.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    top: 24px;
+    left: 2px;
   }
 }
