--- a/src/scss/_Footer.scss
+++ b/src/scss/_Footer.scss
@@ -1,12 +1,12 @@
 .footer {
-  margin-top: $spacing-xl;
-  padding-bottom: $spacing-xl;
-  padding-top: $spacing-xl*2;
+  margin-top: $spacing-l;
+  padding-bottom: $spacing-l;
+  padding-top: $spacing-l*2;
   border-top: 1px solid rgba(0, 0, 0, 0.25);
 }
 
 @media (max-width: 800px) {
   .footer p:last-child {
-    padding-bottom: $spacing-l;
+    padding-bottom: $spacing-m;
   }
 }
