--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,6 +12,7 @@ $header-height: 90px;
 @import 'Header';
 @import 'Body';
 @import 'Footer';
+@import 'Loading';
 
 .rosewood {
   color: $rosewood;
