--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,7 +7,7 @@
   margin-bottom: -90px; }
 
 .header-logo {
-  height: 70%;
+  height: 60%;
   margin-left: 20px;
   position: absolute;
   top: 50%;
@@ -140,7 +140,7 @@
     top: 24px;
     left: 2px; } }
 .mainImage {
-  height: 80vh;
+  height: 78vh;
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
@@ -157,7 +157,7 @@
   line-height: 0.9;
   color: #cc3300; }
 
-.mainDescription p {
+p {
   font-size: 130%;
   font-weight: 100;
   margin-bottom: 10px; }
@@ -198,7 +198,8 @@ form {
 
 @media (max-width: 800px) {
   .mainImage {
-    height: 64vh; }
+    height: 64vh;
+    margin-bottom: 30px; }
 
   .mainTitle {
     font-size: 3.3em; }
@@ -210,10 +211,39 @@ form {
   padding-bottom: 30px;
   padding-top: 60px;
   border-top: 1px solid rgba(0, 0, 0, 0.25); }
+  .footer p {
+    font-size: 100%; }
 
 @media (max-width: 800px) {
   .footer p:last-child {
     padding-bottom: 20px; } }
+.loading {
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  z-index: 100;
+  background-color: white; }
+  .loading .center {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    text-align: center; }
+  .loading .loading-icon {
+    width: 100px;
+    margin-bottom: 10px; }
+
+.loading.fade {
+  animation-name: fade;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards; }
+
+@keyframes fade {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
 .rosewood {
   color: #cc3300; }
 
