--- a/src/scss/_Footer.scss
+++ b/src/scss/_Footer.scss
@@ -3,6 +3,10 @@
   padding-bottom: $spacing-l;
   padding-top: $spacing-l*2;
   border-top: 1px solid rgba(0, 0, 0, 0.25);
+
+  p {
+    font-size: 100%;
+  }
 }
 
 @media (max-width: 800px) {
