--- a/src/scss/_Loading.scss
+++ b/src/scss/_Loading.scss
@@ -25,9 +25,10 @@
   animation-duration: 1s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+  pointer-events: none;
 }
 
 @keyframes fade {
-  from {opacity: 1;}
-  to {opacity: 0;}
+  from {opacity: 1; display: block}
+  to {opacity: 0; display: none}
 }
