--- a/src/css/index.css
+++ b/src/css/index.css
@@ -149,13 +149,14 @@
 
 .mainPreTitle {
   font-size: 50%;
-  color: black; }
+  color: black;
+  display: block;
+  padding: 10px 0; }
 
 .mainTitle {
   font-weight: 100;
   font-size: 5em;
-  line-height: 0.9;
-  color: #cc3300; }
+  line-height: 0.9; }
 
 p {
   font-size: 130%;
@@ -210,7 +211,8 @@ form {
   margin-top: 30px;
   padding-bottom: 30px;
   padding-top: 60px;
-  border-top: 1px solid rgba(0, 0, 0, 0.25); }
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: #f8f8f8; }
   .footer p {
     font-size: 100%; }
 
@@ -252,5 +254,8 @@ form {
 
 .u-caps {
   text-transform: uppercase; }
+
+::selection {
+  background: #eee; }
 
 /*# sourceMappingURL=index.css.map */
