--- a/src/scss/_Footer.scss
+++ b/src/scss/_Footer.scss
@@ -2,7 +2,8 @@
   margin-top: $spacing-l;
   padding-bottom: $spacing-l;
   padding-top: $spacing-l*2;
-  border-top: 1px solid rgba(0, 0, 0, 0.25);
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: $grey;
 
   p {
     font-size: 100%;
