--- a/src/css/index.css
+++ b/src/css/index.css
@@ -158,6 +158,12 @@
   font-size: 5em;
   line-height: 0.9; }
 
+.mainDescription h4 {
+  margin-top: 30px;
+  margin-bottom: 10px; }
+.mainDescription h4:first-child {
+  margin-top: 0; }
+
 p {
   font-size: 130%;
   font-weight: 100;
