--- a/src/scss/_Footer.scss
+++ b/src/scss/_Footer.scss
@@ -10,7 +10,7 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: $small-screen) {
   .footer p:last-child {
     padding-bottom: $spacing-m;
   }
