--- a/src/scss/_Header.scss
+++ b/src/scss/_Header.scss
@@ -14,6 +14,18 @@
   transform: translateY(-50%);
 }
 
+.header-title {
+  text-transform: uppercase;
+  color: $rosewood;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-left: $spacing-m;
+  margin-bottom: 0;
+  letter-spacing: 0px;
+  font-weight: 100;
+}
+
 .header-links {
   list-style-type: none;
   position: absolute;
@@ -62,7 +74,7 @@
   display: none;
 }
 
-@media (max-width: 800px) {
+@media (max-width: $small-screen) {
   .header-links {
     position: static;
     display: block;
