--- a/src/scss/_Body.scss
+++ b/src/scss/_Body.scss
@@ -124,6 +124,74 @@ form {
 
 }
 
+.centerPhotoBack {
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 100;
+  transition: opacity 0.5s;
+}
+
+.centerPhotoBack.inactive {
+  pointer-events: none;
+}
+
+.centerPhotoBack.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.centerPhoto {
+  position: absolute;
+  z-index: 101;
+  width: 50vw;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.gallery-photos {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: -30px;
+
+  .gallery-image {
+    flex: 1 0 300px;
+    margin: 15px;
+    height: 260px;
+    overflow: hidden;
+    -webkit-box-shadow: 0px 0px 10px -3px rgba(0,0,0,0.59);
+    -moz-box-shadow: 0px 0px 10px -3px rgba(0,0,0,0.59);
+    box-shadow: 0px 0px 10px -3px rgba(0,0,0,0.59);
+    transition: box-shadow 0.25s ease-in-out;
+  }
+
+  .gallery-image-child {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition: transform 0.25s ease-in-out;
+    cursor: pointer;
+  }
+
+  .gallery-image:hover .gallery-image-child {
+    transform: scale(1.08);
+  }
+
+  .gallery-image:hover {
+    -webkit-box-shadow: 0px 0px 14px -3px rgba(0,0,0,0.4);
+    -moz-box-shadow: 0px 0px 14px -3px rgba(0,0,0,0.4);
+    box-shadow: 0px 0px 14px -3px rgba(0,0,0,0.4);
+  }
+}
+
 @media (max-width: $small-screen) {
   .mainImage {
     height: 64vh;
@@ -136,5 +204,9 @@ form {
 
   .columns div {
     margin-bottom: $spacing-l;
+  }
+
+  .centerPhoto {
+    width: 100vw;
   }
 }
