--- a/src/scss/_Header.scss
+++ b/src/scss/_Header.scss
@@ -20,10 +20,12 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  margin-left: $spacing-m;
+  margin-left: 95px;
   margin-bottom: 0;
+  margin-top: 3px;
   letter-spacing: 0px;
-  font-weight: 100;
+  font-weight: 400;
+  line-height: 110%;
 }
 
 .header-links {
