--- a/src/scss/_Body.scss
+++ b/src/scss/_Body.scss
@@ -21,12 +21,12 @@
 }
 
 .mainDescription {
-  h4 {
+  h4, h5 {
     margin-top: $spacing-l;
     margin-bottom: $spacing-s;
   }
 
-  h4:first-child {
+  h4:first-child, h5:first-child {
     margin-top: 0;
   }
 
@@ -65,6 +65,17 @@ p:last-child, h1:last-child {
 
   img {
     width: 100%;
+  }
+}
+
+#Vendors .container {
+  img {
+    height: 100px;
+    width: auto;
+    margin-top: $spacing-xl;
+  }
+  h4 {
+    margin-top: $spacing-s;
   }
 }
 
@@ -108,7 +119,7 @@ form {
   }
 }
 
-.features {
+.basicPage {
   a {
     color: $rosewood;
     text-decoration: underline;
