--- a/src/css/index.css
+++ b/src/css/index.css
@@ -310,7 +310,10 @@ form {
     margin-bottom: 30px; }
 
   .centerPhoto {
-    width: 100vw; } }
+    width: 100vw; }
+
+  .container-border {
+    border-left: none; } }
 .footer {
   margin-top: 30px;
   padding-bottom: 30px;
