--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,8 +3,7 @@
   height: 90px;
   background-color: rgba(255, 255, 255, 0.9);
   position: relative;
-  z-index: 10;
-  margin-bottom: -90px; }
+  z-index: 10; }
 
 .header-logo {
   height: 60%;
@@ -158,7 +157,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #eee;
-  margin-bottom: 60px; }
+  margin-top: -90px; }
 
 .mainPreTitle {
   font-size: 50%;
@@ -195,7 +194,8 @@ p:last-child, h1:last-child {
 .container-border {
   padding-left: 30px;
   border-left: 1px solid black;
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+  margin-top: 60px; }
 
 .container {
   margin-bottom: 60px; }
