--- a/src/scss/_Footer.scss
+++ b/src/scss/_Footer.scss
@@ -4,6 +4,7 @@
   padding-top: $spacing-l*2;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
   background-color: $grey;
+  background-image: url('../img/cream-dust.png');
 
   p {
     font-size: 100%;
